--- a/check.html
+++ b/check.html
@@ -2,36 +2,95 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Verifica Invito</title>
+  <title>Arzella di maggio</title>
   <style>
-    body { font-family: sans-serif; text-align: center; padding: 2em; }
-    .result { font-size: 1.5em; margin-top: 2em; }
-    .ok { color: green; }
-    .not-ok { color: red; }
+    body {
+      font-family: 'Helvetica Neue', Helvetica, sans-serif;
+      background: white;
+      color: #006d77;
+      padding: 3em 1em;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.8em;
+      color: #007f91;
+      margin-bottom: 0.2em;
+    }
+
+    .subtitle {
+      font-weight: bold;
+      text-transform: uppercase;
+      font-size: 1.4em;
+      margin-bottom: 2em;
+      letter-spacing: 2px;
+    }
+
+    .box {
+      display: inline-block;
+      background: #f8f9fa;
+      border: 1px solid #e0f7fa;
+      border-radius: 12px;
+      padding: 2em 2em;
+      max-width: 500px;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+
+    .line {
+      font-size: 1.2em;
+      margin: 1em 0;
+    }
+
+    .emphasis {
+      font-weight: bold;
+      font-style: italic;
+      color: #005f73;
+    }
+
+    .not-found {
+      color: #b00020;
+    }
   </style>
 </head>
 <body>
-  <h1>Verifica Invito</h1>
-  <div class="result" id="result">Caricamento in corso...</div>
+  <h1>Arzella di maggio</h1>
+  <div class="subtitle">INVITO</div>
+
+  <div class="box" id="result">Caricamento in corso...</div>
 
   <script>
     async function checkGuest() {
       const params = new URLSearchParams(window.location.search);
       const id = params.get("id");
+      const resultEl = document.getElementById("result");
+
       if (!id) {
-        document.getElementById("result").textContent = "ID mancante";
+        resultEl.innerHTML = "<div class='not-found'>❌ ID mancante.</div>";
         return;
       }
 
-      const response = await fetch("https://script.google.com/macros/s/AKfycbwRt2ivnC3yTJTjL3PsKjY6VTGhDsnRr5ADYuZ9ZfOXx3OlhShsVtSoyCoI6qFOUy8t/exec?id=" + encodeURIComponent(id));
-      const data = await response.json();
+      try {
+        const response = await fetch("https://script.google.com/macros/s/AKfycbwRt2ivnC3yTJTjL3PsKjY6VTGhDsnRr5ADYuZ9ZfOXx3OlhShsVtSoyCoI6qFOUy8t/exec?id=" + encodeURIComponent(id));
+        const data = await response.json();
 
-      const resultEl = document.getElementById("result");
-
-      if (data.presente) {
-        resultEl.innerHTML = `<span class="ok">✅ Benvenuto, ${id.replace(/-/g, ' ')}</span>`;
-      } else {
-        resultEl.innerHTML = `<span class="not-ok">❌ ${id.replace(/-/g, ' ')} non è nella lista</span>`;
+        if (data.presente) {
+          resultEl.innerHTML = `
+            <div class="line"><strong>${id.replace(/-/g, ' ')}</strong>, grazie per la partecipazione.</div>
+            <div class="line">✅ Sei stato aggiunto alla lista.</div>
+            <div class="line emphasis">la prima vera festa</div>
+            <div class="line">sabato 10 maggio ore 20,30</div>
+            <div class="line">Imola, via Codrignano 58p (3° km dalla Curva della Tosa)</div>
+          `;
+        } else {
+          resultEl.innerHTML = `
+            <div class="line not-found">Salve, se hai effettuato il pagamento riceverai presto un link con il tuo invito.</div>
+          `;
+        }
+      } catch (err) {
+        resultEl.innerHTML = `
+          <div class="line not-found">⚠️ Errore nel recupero dei dati. Riprova più tardi.</div>
+        `;
       }
     }
 
