--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <h1>🎉 Benvenuto alla Festa Arzella!</h1>
   <p>Scansiona il tuo QR per accedere o aggiungi un nuovo invitato.</p>
 
-  <a href="check.html" class="button">✅ Verifica Invito</a><br><br>
+  <a href="ticket.html" class="button">✅ Ticket</a><br><br>
+  <a href="genera-invito.html" class="button">➕ Crea Invito</a>
   <a href="admin.html" class="button">➕ Aggiungi Invitato</a>
 </body>
 </html>
