--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <p>Scansiona il tuo QR per accedere o aggiungi un nuovo invitato.</p>
 
   <a href="ticket.html" class="button">✅ Ticket</a><br><br>
-  <a href="genera-invito.html" class="button">➕ Crea Invito</a>
-  <a href="admin.html" class="button">➕ Aggiungi Invitato</a>
+  <a href="genera-invito.html" class="button">➕ Crea Invito</a><br><br>
+  <!-- <a href="admin.html" class="button">➕ Aggiungi Invitato</a> -->
 </body>
 </html>
